# quantum-pqc

./: .dockerignore  .gitignore  .npmignore  .release-please-manifest.json  .trivyignore  .trufflehog.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  action.yml  apply-ruleset.sh  build.rs  release-please-config.json  trivy.yaml
.github/: CODEOWNERS  GITHUB_APP_SETUP.md  PERMISSIONS_JUSTIFICATION.md  PULL_REQUEST_TEMPLATE.md  RELEASE_PLEASE_SETUP.md  RELEASE_PROCESS.md  dependabot.yml
benches/: benchmarks.rs
data/: cccs_algorithms.json  cmvp_certificates.json
docs/: AUTO_REMEDIATION.md  CALVER.md  CANADIAN_COMPLIANCE_IMPLEMENTATION.md  CI-CD-PLATFORMS.md  OSSF_IMPLEMENTATION.md  PLATFORM-REVIEW.md  QUANTUM_READINESS_ASSESSMENT.md  QUANTUM_READINESS_SUMMARY.md  QUANTUM_THREAT_ATLAS_ANALYSIS.md  QUANTUM_THREAT_ATLAS_SUMMARY.md  REMEDIATION.md  START_HERE.md  canadian-compliance.md  community-standards.md  openssf-research-findings.md  openssf-scorecard-improvements.md  security-scanning.md  vulnerability-remediation-phase2.md
examples/: canadian_compliance_example.rs  generate_compliance_report.rs  remediation_example.rs  scan_directory.rs
mcp/: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  claude_desktop_config.json  package.json
scripts/: build.sh  release.sh  scan-all-samples.sh  test.sh
src/: algorithm_database.rs  audit.rs  canadian_compliance.rs  compliance.rs  detector.rs  lib.rs  parser.rs  remediation.rs  types.rs
test/: README.md  (+2 more)
(+47 files in other folders)
