[package]
name = "pqc-scanner"
version = "2025.11.18"
edition = "2024"
authors = ["ArcQubit Team"]
description = "Quantum-safe cryptography auditor for detecting vulnerable algorithms"
license = "MIT"
repository = "https://github.com/arcqubit/pqc-scanner"

[lib]
name = "pqc_scanner"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"
thiserror = "2.0"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.7"

[build-dependencies]
serde_json = "1.0"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "generate_compliance_report"
path = "examples/generate_compliance_report.rs"

[[bin]]
name = "pqc-scanner"
path = "src/bin/pqc-scanner.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true

# Optimized binary profile with panic=abort for smaller binary size
# Use: cargo build --profile release-binary
[profile.release-binary]
inherits = "release"
panic = "abort"

[package.metadata.cargo-udeps.ignore]
normal = ["wasm-bindgen", "serde-wasm-bindgen"]
development = ["wasm-bindgen-test"]
